change to use sequelize cli

--- a/package.json
+++ b/package.json
@@ -1,26 +1,38 @@
 {
   "name": "project-basic",
   "version": "1.0.0",
-  "type": "module",
   "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon --exec babel-node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@elastic/elasticsearch": "^8.16.2",
+    "axios": "^1.7.8",
+    "body-parser": "^1.20.3",
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
     "esm": "^3.2.25",
     "express": "^4.21.1",
+    "express-ejs-layouts": "^2.5.1",
+    "express-paginate": "^1.0.2",
     "joi": "^17.13.3",
     "mysql2": "^3.11.4",
+    "paginate": "^0.2.0",
     "winston": "^3.17.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7"
+    "@babel/core": "^7.26.0",
+    "@babel/node": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "nodemon": "^3.1.7",
+    "sequelize": "^6.37.5",
+    "sequelize-cli": "^6.6.2"
   }
 }
